# ideation-goat

./: .env.example  .gitignore  ARCHITECTURE.md  Krishna_addons.md  LICENSE  README.md  app.py  arxiv_client.py  config.py  data_ingestion.py  mcp-config.json  mcp_server.py  nitro.config.json  orchestrator.py  package-lock.json  package.json  patent_client.py  pnpm-lock.yaml  pyproject.toml  repo_profiler.py  requirements.txt  scaffolder.py  scholar_client.py  search_engine.py  server.py  sujay_addons.md  test_addons.py  test_server.py  tobedone.md  tsconfig.json  workspace_analyzer.py
Archives/: Multi_Domain_Semantic_Architect.md  lochan-addons.md  roadmap.md
analyzers/: __init__.py  bug_profiler.py  compatibility_scorer.py  cost_forecaster.py  cve_shield.py  di_profiler.py  github_public_api.py  health_analyzer.py  identity_sandbox.py  lockin_profiler.py  schema_healer.py  workspace_analyzer.py
docs/: ARCHITECTURE.md  FINAL_HANDOVER_REPORT.md  Multi_Domain_Semantic_Architect.md  NITROSTACK_INSTRUCTIONS.md  PITCH_SCRIPT.md  UI_WIDGET_INSTRUCTIONS.md  addons.md  lochan_work_done.md  mcp_server_v1.py
src/: index.ts
tests/: test_addons.py  test_server.py
