[project]
name = "ideation-goat"
version = "0.1.0"
description = "Multi-Domain Semantic Architect Agent supporting codebase matching, academic literature search (Semantic Scholar, arXiv), and patent search integration (Google Patents via SerpApi)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "mcp>=1.28.1",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
